--- a/passky-server/docker-compose.yml
+++ b/passky-server/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     environment:
       APP_HOST: $APP_PASSKY_SERVER_IP
       APP_PORT: 80
-      PROXY_AUTH_ADD: "true"
+      PROXY_AUTH_ADD: "false"
 
   database:
     image: 'rabbitcompany/passky-database:v7.0.0'
