--- a/oak-node/umbrel-app.yml
+++ b/oak-node/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: oak-node
-category: Automation
+category: Finance
 name: Oak Node
 version: "0.3.1"
 tagline: Do more with your LND node
