--- a/suredbits-wallet/umbrel-app.yml
+++ b/suredbits-wallet/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: suredbits-wallet
 category: Finance
 name: Suredbits Wallet
-version: "1.9.2"
+version: "1.9.2-f44ad4a4"
 tagline: A universal DLC wallet
 description: >-
   The Suredbits Wallet is your one stop shop for building Discreet
@@ -13,6 +13,11 @@ description: >-
 
 
   WARNING: This is an Alpha software, don't put too much money in.
+releaseNotes: >-
+  Fixes blockchain parsing bugs with Taproot transactions.
+  Add ability to backup mnemonic seed for wallet.
+  Optimizations around wallet server startup.
+
 developer: Suredbits
 website: https://suredbits.com
 dependencies:
@@ -27,4 +32,3 @@ gallery:
 path: ""
 defaultUsername: ""
 defaultPassword: ""
-deterministicPassword: true
