Add release notes property

--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -17,6 +17,8 @@ description: >-
 
 
   WARNING: This version of Krystal Bull is an early alpha release for testing. It's not secure, please don't use it for anything serious.
+releaseNotes: >-
+  Auto login
 developer: SuredBits
 website: https://suredbits.com/
 dependencies: []
