--- a/krystal-bull/umbrel-app.yml
+++ b/krystal-bull/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: krystal-bull
 category: Finance
 name: Krystal Bull
-version: "1.9.2"
+version: "1.9.2-f44ad4a4"
 tagline: Become an oracle and create Bitcoin bets
 description: >-
   Krystal Bull allows you to become a Bitcoin oracle. An oracle
@@ -17,6 +17,8 @@ description: >-
 
 
   WARNING: This version of Krystal Bull is an early alpha release for testing. It's not secure, please don't use it for anything serious.
+releaseNotes: >-
+  Auto login
 developer: SuredBits
 website: https://suredbits.com/
 dependencies: []
@@ -28,4 +30,5 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
-deterministicPassword: true
+defaultUsername: ""
+defaultPassword: ""
