--- a/oak-node/umbrel-app.yml
+++ b/oak-node/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: oak-node
 category: Finance
 name: Oak Node
-version: "0.3.1"
+version: "0.3.2"
 tagline: Do more with your LND node
 description: >-
   Oak Node gives you Scheduled Payments. Now you can send sats to a Lightning Address on a schedule. 
@@ -10,6 +10,11 @@ description: >-
 
 
   Oak Node also includes an optional bot module for more advanced users.
+releaseNotes: >-
+  This update adds a Nostr bot, which lets you issue commands to your Oak Node from any Nostr client.
+  
+  
+  It also brings support for sending to Lightning Addresses on tor, as well as other smaller fixes and improvements.
 developer: Carlos
 website: https://oak-node.net
 dependencies:
