--- a/btcpay-server/docker-compose.yml
+++ b/btcpay-server/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       PROXY_AUTH_ADD: "false"
 
   nbxplorer:
-    image: nicolasdorier/nbxplorer:2.2.20@sha256:8f0e7f68513596e0a2555990d262169088a70204abe397bf18ba921f9b0608f3
+    image: nicolasdorier/nbxplorer:2.2.33@sha256:70741f1ecf96de31a4606e0a453d8a25caf5bd8aaf8d345f20740c837f04e6fb
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -30,7 +30,7 @@ services:
         ipv4_address: $APP_BTCPAY_SERVER_NBXPLORER_IP
 
   web:
-    image: btcpayserver/btcpayserver:1.5.4@sha256:2c1338e14cda481a738f900f1684167d435618db3890bcfed6e51cd7e8d7674c
+    image: btcpayserver/btcpayserver:1.6.3@sha256:fb514c417933fc088dec2fb841f5d3572e35429412e79bb12b25fb4437519162
     user: "1000:1000"
     restart: on-failure
     stop_grace_period: 1m
@@ -57,12 +57,12 @@ services:
         ipv4_address: $APP_BTCPAY_SERVER_IP
 
   postgres:
-    image: btcpayserver/postgres:13.6@sha256:dadf0048895a888d88a2dd773dde2f5868c45f74ad37c6d208694df54b590531
+    image: btcpayserver/postgres:13.7@sha256:dadf0048895a888d88a2dd773dde2f5868c45f74ad37c6d208694df54b590531
     # This needs to run as root for migrations to succeed
     # user: "1000:1000"
     restart: on-failure
     # https://github.com/btcpayserver/btcpayserver-docker/commit/a65e7db6851092c75c5ac6c091a5f36ccc5fc26e
-    command: [ "-c", "random_page_cost=1.0" ]
+    command: ["-c", "random_page_cost=1.0", "-c", "shared_preload_libraries=pg_stat_statements"]
     stop_grace_period: 1m
     environment:
         POSTGRES_HOST_AUTH_METHOD: trust
