fix: samourai-server app depends on electrs

--- a/samourai-server/umbrel-app.yml
+++ b/samourai-server/umbrel-app.yml
@@ -20,6 +20,7 @@ developer: Samourai
 website: https://samouraiwallet.com
 dependencies:
   - bitcoin
+  - electrs
 repo: https://github.com/louneskmt/umbrel-samourai-dojo/tree/v1.16.1-umbrel
 support: https://t.me/SamouraiWallet
 port: 3005
