--- a/bitcoin-labels/docker-compose.yml
+++ b/bitcoin-labels/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       APP_PORT: $APP_BITCOIN_LABELS_PORT
 
   web:
-    image: abhishandy/bit-table:v0.2.1
+    image: abhishandy/bitcoin-labels:v0.2.1
     restart: on-failure
     stop_grace_period: 1m
     ports:
