--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -37,4 +37,23 @@ submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
   Updated Urbit binary to v1.17
 
+  -   Revamped Urbit’s terminal stack. This release contains the first
+      phase of a longer-running project towards a next-generation terminal
+      experience. Highlights in this release include:
+      
+      -   Support for 2D cursor movement, and by extension 2D screen
+          drawing.
+          
+      -   Minimal mouse-click support.
+      
+      -   Faster pasting of large texts.
+      
+      -   Informal printfs (~&) now get rendered in grey, to visually
+          distinguish them from formal dill output.
+          
+  -   Updated versioning scheme for pre-release binaries.
+  
+  -   The code for the Vere runtime has been moved out of the urbit/urbit
+      repository, and now lives in urbit/vere.
+
   Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.17
