--- a/urbit/umbrel-app.yml
+++ b/urbit/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: urbit
 category: Networking
 name: Urbit
-version: "v1.16-hotfix2"
+version: "v1.17"
 tagline: Run Urbit on your Umbrel
 description: >-
   Urbit is a personal server for self-sovereign personal & networked
@@ -35,12 +35,24 @@ torOnly: false
 submitter: ~mopfel-winrux
 submission: https://github.com/getumbrel/umbrel/pull/1246
 releaseNotes: >-
-  Updated Urbit binary to v1.16
+  -   Revamped Urbit’s terminal stack. This release contains the first
+      phase of a longer-running project towards a next-generation terminal
+      experience. Highlights in this release include:
+      
+      -   Support for 2D cursor movement, and by extension 2D screen
+          drawing.
+          
+      -   Minimal mouse-click support.
+      
+      -   Faster pasting of large texts.
+      
+      -   Informal printfs (~&) now get rendered in grey, to visually
+          distinguish them from formal dill output.
+          
+  -   Updated versioning scheme for pre-release binaries.
+  
+  
+  -   The code for the Vere runtime has been moved out of the urbit/urbit
+      repository, and now lives in urbit/vere.
 
-  Use new Vere repo, fix binary extraction
-
-  This release is functionally equivalent to v1.15 but is built in the new
-  Vere repo using Bazel instead of Nix with a new and improved release
-  pipeline. It marks the successful extraction of the runtime from the
-  Urbit monorepo. It also adds a new AArch64-specific macOS build and
-  removes the Windows build.
+  Full release notes here: https://github.com/urbit/vere/releases/tag/vere-v1.17
