Disclaimer on torrent apps

--- a/simple-torrent/umbrel-app.yml
+++ b/simple-torrent/umbrel-app.yml
@@ -28,6 +28,8 @@ description: >-
   - Protocol Handler to magnet:
 
   - Magnet RSS subscribing supported
+
+  - !IMPORTANT! - SimpleTorrent downloads torrents over the Clearnet, NOT USING TOR.  
 developer: Preston
 website: https://github.com/boypt
 dependencies: []
