--- a/transmission/umbrel-app.yml
+++ b/transmission/umbrel-app.yml
@@ -15,6 +15,8 @@ description: >-
 
   
   We don't bundle toolbars, pop-up ads, flash ads, twitter tools, or anything else. It doesn't hold some features back for a payware version. We don't track our users. Our website and forums have no third-party ads or analytics.
+  
+  !IMPORTANT! - Transmission downloads torrents over the Clearnet, NOT USING TOR.  
 developer: Transmission
 website: https://transmissionbt.com/
 dependencies: []
