--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: Lightning Node Management
 name: Torq
-version: "v0.16.6"
+version: "v0.17.3"
 tagline: Capital management for routing nodes on the lightning network
 description: >-
   Operating a routing node requires managing capital efficiently. If you look past the technical challenges, what you are trying to do is stack sats and support the network by routing liquidity. No matter your motivation, efficiently managing your capital is essential.
@@ -30,7 +30,7 @@ description: >-
   - Fetch and analyse data from any point in time
 
   - Navigate through time (days, weeks, months) to track your progress
-  
+
   - Tag channels and nodes with custom labels (Exchange, Routing node, Sink, Source, or anything else)
 
 developer: LN Capital
@@ -46,19 +46,23 @@ gallery:
   - 3.jpg
   - 4.jpg
 releaseNotes: >-
-  This release switches over to using admin.macaroon allowing the user to update, close and open channels.
-  We also fix a series of minor bugs and adds filtering of channel and node tags.
+  New features:
 
-  * Add admin.macaroon support
-  
-  * You can now filter on tags
+  * Users can sign and verify signatures
 
-  * Missing opening and closing channel time is fetched from Torq Vector
-  
-  * Closed channels no longer logs errors on new forwards
-  
-  * Fixed timestamp issue prevented fetching from being returned for channel and summary pages.
-  
+  *  Vector monitoring is now ready (and users can sign using Torq to get started)
+
+  *  Channel point column in the channel stable
+
+  *  In app "Help chat"
+
+  Fixes:
+
+  *  Several UI fixes
+
+  *  Links to mempool, amboss and 1ml are working again
+
+  *  Fix events toggling on channel inspect page
 
 path: ""
 defaultUsername: ""
