--- a/blocky/docker-compose.yml
+++ b/blocky/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     depends_on:
       - blocky
     image: ghcr.io/mozart409/blocky-frontend:v0.1.1
-    platform: "linux/arm64"
+    platform: "linux/x86_64"
     ports:
       - '8002:8002'
