--- a/btcpay-server/umbrel-app.yml
+++ b/btcpay-server/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: btcpay-server
 category: bitcoin
 name: BTCPay Server
-version: "1.9.2"
+version: "1.11.0"
 tagline: Accept Bitcoin payments with 0 fees & no 3rd party
 description: >-
   BTCPay Server is a payment processor that allows you to receive
@@ -34,11 +34,10 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >
-  This update from version 1.7.12 to 1.9.2 includes a range of new features, including customizable checkout forms and invoice metadata, store branding options,
-  a redesigned Point of Sale keypad view, improved Point of Sale receipt, and more!
-
+  This update from version 1.9.2 to 1.11.0 includes a range of new features, including an overhaul of invoice reporting, Point of Sale cart redesign, 
+  adding product categories to Point of Sale apps, playing a sound when an invoice is paid, and more!
 
   A full list of new features, improvements, and bug fixes
-  for versions between 1.7.12 and 1.9.2 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
+  for versions between 1.9.2 and 1.11.0 can be found here: https://github.com/btcpayserver/btcpayserver/releases.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel/pull/353
