Update Torq to v1.0.10

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: bitcoin
 name: Torq
-version: "v0.23.1"
+version: "v1.0.10"
 tagline: Scalable Node Management Software
 description: >-
   Operating a Lightning node requires a lot of work. You need to monitor your channels, rebalance them, keep track of your fees and much more.
@@ -13,9 +13,9 @@ description: >-
 
   Features:
 
-  - Workflow based automation.
+  - Advanced decision engine for automation. Create your own logic visually through workflows.
 
-  - Channel and Channel group inspection, even with more than 1000 channels.
+  - Fast even with more than 1000 channels.
   
   - Advanced charts and visualizations of aggregated forwarding statistics
 
