Update Torq to v1.0.11

--- a/torq/umbrel-app.yml
+++ b/torq/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: torq
 category: bitcoin
 name: Torq
-version: "v1.0.10"
+version: "v1.0.11"
 tagline: Scalable Node Management Software
 description: >-
   Operating a Lightning node requires a lot of work. You need to monitor your channels, rebalance them, keep track of your fees and much more.
@@ -51,6 +51,11 @@ gallery:
   - 4.jpg
   - 5.jpg
 releaseNotes: >-
+  
+  Torq v1.0.11
+  
+    Bug fixes:
+     - Fixes issue where creation of new tags overwrote existing tags.
   
   Torq v1.0.10
 
