--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,85 +2,35 @@ manifestVersion: 1
 id: snort
 category: social
 name: Snort
-version: "v0.1.11"
+version: "v0.1.12"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
   Our focus is on providing users with an easy-to-use interface to interact with the Nostr network, making it accessible to all types of users. 
   With its clean and intuitive design, Snort makes it simple to navigate the Nostr network and access its features, allowing users to efficiently manage their data.
 releaseNotes: >-
-  ## Added
+  # Added
 
-  - Discover tab, shows trending users/posts from nostr.build
-
-  - New DM styles
-
-  - Mentioned Zapstr tracks are previewed on Snort with player
-
-  - Custom emoji rendering in posts (NIP-30)
-
-  - Lanaguage selector on new user flow 
-
-  - ZapPool, support nostr ecosystem by donating a percentage of your zaps
-
-  - Alby NWC link added to NWC connect page
-
-  - SemisolDev follow recommendations on Discover tab
-
-  - Pubkey lists (NIP-51) render inline when mentioned in notes
-
-  - Persian language
-
-  - OpenGraph Image/Video media rendered inside link preview box
-
-  - Option to zap everybody on mentioned pubkey list
-
-  - L402 support for inline media (paywall content)
-
-  - Gossip model, query follows write relays for events
-
-  - @snort/system NPM package containing Snort core nostr code
-
-  - NIP-44 Encryption scheme support
-
-  - NIP-59 Gift Wrap support
-
-  - `@snort/system` package 
-
-  - `@snort/system-react` package 
-
-  - Live streaming page (NIP-102)
-
-  - Chat system refactor (adding new chat systems much easier now, NIP-29 first candidate)
-
-  - NIP-29 simple group chat support
+  - nsecBunker support (connection string `bunker://<pubkey>?relay=wss://realy.com[#token]`)
 
 
-  ## Changed
+  # Changed
 
-  - Error page shows actual error message now, also a button to reset app cache
+  - New snort logo by Bitko
 
-  - Massivly improved profile loading 
-
-  - Improved JS bundle size by ejecting CRA and using dynamic modules
-
-  - Switched to `@void-cat/api` package for void.cat uploads 
+  - Infinite scroll changed to manual action (temperarily to fix performance issues)
 
 
-  ## Fixed
+  # Fixed
 
-  - Unmarked thread events replies out of order
-  
-  - Profile links with incorrect hrp fixed in some places
+  - Note to self containing all DMS 
 
-  - `naddr` event loading fixed
+  - Media spotlight disabled for poll options containing images
 
-  - Relay specific requests fixed (Global tab / Search page)
-
-  - NWC connection responds to AUTH requests now
+  - Badge image sizes oversize when bypassing imgproxy due to loading error
 
 
-  https://git.v0l.io/Kieran/snort/compare/v0.1.8...v0.1.11
+  https://git.v0l.io/Kieran/snort/compare/v0.1.11...v0.1.12
 developer: Snort
 website: https://snort.social
 dependencies: []
