--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -1,6 +1,6 @@
 manifestVersion: 1
 id: octoprint
-category: Productivity
+category: productivity
 name: OctoPrint
 version: "1.9.2"
 tagline: The snappy web interface for your 3D printer.
