add bug fix for LND

--- a/ride-the-lightning/umbrel-app.yml
+++ b/ride-the-lightning/umbrel-app.yml
@@ -48,6 +48,8 @@ releaseNotes: >-
 
   - Navigation to node and channel lookup from the info page
 
+  - LND bug fix for the breaking changes on the send payment API
+
 
   Full release notes can be found here: https://github.com/Ride-The-Lightning/RTL/releases
 path: ""
