--- a/snort/umbrel-app.yml
+++ b/snort/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: snort
 category: social
 name: Snort
-version: "v0.1.12"
+version: "v0.1.13"
 tagline: Fast Nostr UI
 description: >-
   Snort is a client for Nostr that is built using React, designed to be fast and lightweight while still offering a wide range of features. 
@@ -11,26 +11,40 @@ description: >-
 releaseNotes: >-
   # Added
 
-  - nsecBunker support (connection string `bunker://<pubkey>?relay=wss://realy.com[#token]`)
+  - Snort V2 Design
+
+  - NIP-24 Encrypted secret chats (nsec login only)
+
+  - NIP-13 Proof of Work (POW)
+
+  - NIP-31 Alt tag spec for unknown event kinds
+
+  - Render mentioned zap goals (Kind 9041)
+
+  - Embed fonts in src (No more google fonts requests)
+
+  - Native key storage for Android app (`Nip7os` interface)
+
+  - Swahili translations
+
+  - Thai translations
 
 
   # Changed
 
-  - New snort logo by Bitko
+  - PWA pre-cache setup (Faster PWA loading)
 
-  - Infinite scroll changed to manual action (temperarily to fix performance issues)
+  - Show note creator button on profile pages
 
 
   # Fixed
 
-  - Note to self containing all DMS 
+  - Umlauts in urls 
 
-  - Media spotlight disabled for poll options containing images
-
-  - Badge image sizes oversize when bypassing imgproxy due to loading error
+  - Reject events which don't match request filter
 
 
-  https://git.v0l.io/Kieran/snort/compare/v0.1.11...v0.1.12
+  https://git.v0l.io/Kieran/snort/compare/v0.1.12...v0.1.13
 developer: Snort
 website: https://snort.social
 dependencies: []
