tweak breaking changes text

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -45,10 +45,11 @@ description: >-
   
   - User-defined storage structure
 releaseNotes: >
-  ⚠️ To disable machine learning now, use IMMICH_MACHINE_LEARNING_ENABLED=false
-  (previously IMMICH_MACHINE_LEARNING_URL=false)
-
-  ⚠️ Sentence-Transformers is no longer used for CLIP models, users who set MACHINE_LEARNING_CLIP_IMAGE_MODEL or MACHINE_LEARNING_CLIP_TEXT_MODEL must migrate to one of the ViT-B models listed here, with the caveat that OpenCLIP models will require running CLIP on all images since the embeddings are incompatible.
+  ⚠️ This update includes the following breaking changes for advanced users who have modified their docker-compose.yml file:
+  
+  - To disable machine learning now, use IMMICH_MACHINE_LEARNING_ENABLED=false (previously IMMICH_MACHINE_LEARNING_URL=false)
+  
+  - Sentence-Transformers is no longer used for CLIP models, users who set MACHINE_LEARNING_CLIP_IMAGE_MODEL or MACHINE_LEARNING_CLIP_TEXT_MODEL must migrate to one of the ViT-B models listed here, with the caveat that OpenCLIP models will require running CLIP on all images since the embeddings are incompatible.
   
 
   This update brings the following new features to Immich:
